syntax = "proto3";
package PlatPmd;
import "Types.proto";

// 账号信息相关
message self_info_s2c
{
    Types.P_Player player = 1;
}
